GNU nano 2.3.1 - 2011.05.10
2011-05-10 Chris Allegretta <chrisa@asty.org>
        * text.c (do_enter): Only increment totsize by the auto-indented amount, size the previous line's size was
	  already counted.  Fixes bug reported by Robert Spanjaard.

2011-05-08 Chris Allegretta <chrisa@asty.org>
	* doc/syntax/Makefile.am: Finally get around to sorting the syntax file list

2011-05-08 Matthew Wild <mattj100@Savannah>
	* doc/syntax/spec.nanorc: New lua syntax highlighting config

2011-03-28 Asterios Dramis <asterios.dramis@gmail.com>
	* doc/syntax/spec.nanorc: New RPM spec file highlighting config

2011-03-12 Chris Allegretta <chrisa@asty.org>
	* po/*: Sync latest translation fixes, add an update_linguas.sh script.  Rename
	  existing update.pl to update_sources.pl to make it more specific.
      
2011-03-04 Chris Allegretta <chrisa@asty.org>
	* color.c (color_update): Add check for whether the file even exists
	  before we try to run the magic check on it.  Fixes error messages to stderr
	  when reading in files that don't exist, reported by Mike Frysinger.

2011-03-03 Chris Allegretta <chrisa@asty.org>
	* color.c (color_update): Remove unneeded debugging message from
	  libmagic commit.  Fixed extra messages going to stderr reported by Mike Frysinger.

GNU nano 2.3.0 - 2011.02.26
2011-02-26 Chris Allegretta <chrisa@asty.org>
	* Change RAW in function_type enum to RAWINPUT, to fix compilation on AIX, 
	  reported by Richard G  Daniel <skunk@iskunk.org>.

2011-02-23 Chris Allegretta <chrisa@asty.org>
	* Fix some more severe warnings from 'g++ -pedantic', from patch originally 
	  by Eitan Adler <lists@eitanadler.com>

2011-02-23 Kamil Dudka <kdudka@redhat.com>
	* doc/man/nanorc.5: Fix small typo

2011-02-22 Chris Allegretta <chrisa@asty.org>
	* color.c (nfreeregex): Fix that we were trying to set the pointer passed by value
	  to NULL.  Fixes crashes on file save reported by Ken Tyler and Matthieu Lejeune. 

2011-02-18 Chris Allegretta <chrisa@asty.org>