@@ -225,11 +225,11 @@ char *parse_next_regex(char *ptr)
 
 /* Compile the regular expression regex to see if it's valid.  Return
  * TRUE if it is, or FALSE otherwise. */
-bool nregcomp(const char *regex, int eflags)
+bool nregcomp(const char *regex, int cflags)
 {
     regex_t preg;
     const char *r = fixbounds(regex);
-    int rc = regcomp(&preg, r, REG_EXTENDED | eflags);
+    int rc = regcomp(&preg, r, REG_EXTENDED | cflags);
 
     if (rc != 0) {
 	size_t len = regerror(rc, &preg, NULL, 0);
@@ -666,9 +666,9 @@ void parse_include(char *ptr)
 
 /* Return the short value corresponding to the color named in colorname,
  * and set bright to TRUE if that color is bright. */
-short color_to_short(const char *colorname, bool *bright)
+COLORWIDTH color_to_short(const char *colorname, bool *bright)
 {
-    short mcolor = -1;
+    COLORWIDTH mcolor = -1;
 
     assert(colorname != NULL && bright != NULL);
 
@@ -708,7 +708,7 @@ short color_to_short(const char *colorname, bool *bright)
  * as case insensitive. */
 void parse_colors(char *ptr, bool icase)
 {
-    short fg, bg;
+    COLORWIDTH fg, bg;
     bool bright = FALSE, no_fgcolor = FALSE;
     char *fgstr;
 
@@ -858,7 +858,7 @@ void parse_colors(char *ptr, bool icase)
 		0)) ? mallocstrcpy(NULL, fgstr) : NULL;
 
 	    /* Lame way to skip another static counter */
-            newcolor->id = endsyntax->nmultis;
+	    newcolor->id = endsyntax->nmultis;
             endsyntax->nmultis++;
 	}
     }
